
	Various: Use GtkTreeView's "row-activated" signal instead of
	connecting to "button-press-event".

	* libbalsa/autocrypt.c (autocrypt_db_dialog_run),
	(row_activated_cb):
	* libbalsa/libbalsa-gpgme-cb.c (row_activated_cb),
	(lb_gpgme_select_key):

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* src/main-window.c (bw_notebook_label_new): use container-add
	instead of box-pack, to avoid ridiculously wide tabs;
	* src/sendmsg-window.c (sw_get_user_codeset),
	(quote_parts_select_dlg), (subject_not_empty),
	(sendmsg_window_new):

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* src/message-window.c:

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Stop using GtkBox padding, fill and expand child properties

	* src/information-dialog.c (balsa_information_list):
	* src/main-window.c (bw_create_index_widget), (bw_set_panes),
	(balsa_window_new), (bw_notebook_label_new), (bw_find_real):

2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: restore filtering in a mailbox that is not currently
	being viewed.

	* libbalsa/mailbox.c (libbalsa_mailbox_message_match),
	(lbm_cache_message): make sure we cache message info when we need it
	for matching;
	* libbalsa/mailbox_local.c (message_match_real): guard against
	NULL threading-info;
	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed): no need to disable the
	"Apply" buttons when the mailbox is not being viewed.

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	filter-run-dialog: Disable "Apply selected" and "Apply now" when
	the mailbox is not currently being viewed in the main window. It
	no longer crashes, because of the previous commit, but it does
	not actually carry out any filters, so the user should see the
	option as disabled.
